syntax = "proto3";

package fib;

service Fib {
    rpc GetFibSeq (FibRequest) returns (FibResponse) {}
}

message FibRequest{
    int64 start = 1;
    int64 end = 2;
}

message FibResponse {
    string res = 1;
}